dpkg (1.17.17) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Add dpkg-vendor, Dpkg/File.pm and Dpkg/Util.pm to the list of files with
    translatable strings, so that they can be translated.
  * Fix some typos for versioned and mentioned in comments and changelogs.
  * Mark for translation and unify "rm cleanup" string in dpkg.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 13:46:57 +0200

dpkg (1.17.16) unstable; urgency=low

  * Set the copyright holder in the po4a calls for man pages.
  * Switch remaining topic to named variable in Dpkg::Source::Patch:analyze(),
    otherwise the loop was expecting values in one variable but storing them
    in another. Regression introduced in dpkg 1.17.14. Closes: #764206
  * Set umask to 0 when creating symlinks in tar test case, to normalize
    results. POSIX specifies that symlinks have undefined permissions in
    their mode, so their setting is system dependent. Linux does not honor
    the umask for symlinks, other systems like Hurd or kFreeBSD do.
    Regression introduced in dpkg 1.17.14. Closes: #764171

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 13:29:17 +0200

dpkg (1.17.15) unstable; urgency=low

  * Do not blacklist pie and stackprotector build flags on mips/mipsel.
    Thanks to Aurelien Jarno <aurelien@aurel32.net>. Closes: #763672
  * Fix build failures due to mismatched umask in libdpkg tar test case.
    Set it to a known value of 0022.

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 03:21:58 +0200

dpkg (1.17.14) unstable; urgency=low

  [ Guillem Jover ]
  * Fix '--' to '-' on translations for single character options.
  * Correct the copyright holder in the gettext Makevars files.
  * Switch debian/copyright to machine-readable format 1.0, and extensively
    update the information within.