@@ -5,6 +5,7 @@ dpkg (1.17.17) UNRELEASED; urgency=low
     translatable strings, so that they can be translated.
   * Fix some typos for versioned and mentioned in comments and changelogs.
   * Mark for translation and unify "rm cleanup" string in dpkg.
+  * Mark for translation and improve dselect method handling error messages.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
